crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_admin_helpers.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::with_event_counts":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "sentry.templatetags.sentry_admin_helpers::filter::with_event_counts": no_argument
block_specs: {}
