crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_api.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::convert_to_json":
    kind: tag
    has_doc: false
  "tag::get_recipient_context":
    kind: tag
    has_doc: false
  "tag::serialize":
    kind: tag
    has_doc: false
  "tag::serialize_detailed_org":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "sentry.templatetags.sentry_api::tag::convert_to_json":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_api::tag::get_recipient_context":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: request
            requirement: required
            kind: Variable
          - name: escape
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_api::tag::serialize":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_api::tag::serialize_detailed_org":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: obj
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
