crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_assets.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::absolute_asset_url":
    kind: tag
    has_doc: false
  "tag::asset_url":
    kind: tag
    has_doc: false
  "tag::crossorigin":
    kind: tag
    has_doc: false
  "tag::frontend_app_asset_url":
    kind: tag
    has_doc: false
  "tag::injected_script_assets":
    kind: tag
    has_doc: false
  "tag::script":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "sentry.templatetags.sentry_assets::tag::absolute_asset_url":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: module
            requirement: required
            kind: Variable
          - name: path
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_assets::tag::asset_url":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: module
            requirement: required
            kind: Variable
          - name: path
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_assets::tag::crossorigin":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_assets::tag::frontend_app_asset_url":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: module
            requirement: required
            kind: Variable
          - name: key
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_assets::tag::injected_script_assets":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs:
  "sentry.templatetags.sentry_assets::tag::script":
    body_analysis_evidence: not_detected
    end_tag: endscript
    intermediates: []
