crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_avatars.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::avatar":
    kind: tag
    has_doc: false
  "tag::avatar_for_email":
    kind: tag
    has_doc: false
  "tag::email_avatar":
    kind: tag
    has_doc: false
  "tag::gravatar_url":
    kind: tag
    has_doc: false
  "tag::letter_avatar_svg":
    kind: tag
    has_doc: false
  "tag::profile_photo_url":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "sentry.templatetags.sentry_avatars::tag::avatar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: user
            requirement: required
            kind: Variable
          - name: size
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "sentry.templatetags.sentry_avatars::tag::avatar_for_email":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: user
            requirement: required
            kind: Variable
          - name: size
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "sentry.templatetags.sentry_avatars::tag::email_avatar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: display_name
            requirement: required
            kind: Variable
          - name: identifier
            requirement: required
            kind: Variable
          - name: size
            requirement: optional
            kind: Variable
          - name: try_gravatar
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_avatars::tag::gravatar_url":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: email
            requirement: required
            kind: Variable
          - name: size
            requirement: required
            kind: Variable
          - name: default
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_avatars::tag::letter_avatar_svg":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: display_name
            requirement: required
            kind: Variable
          - name: identifier
            requirement: required
            kind: Variable
          - name: size
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_avatars::tag::profile_photo_url":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: user_id
            requirement: required
            kind: Variable
          - name: size
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
