crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_features.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::feature":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "sentry.templatetags.sentry_features::tag::feature":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "%r tag requires an argument"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: name
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "sentry.templatetags.sentry_features::tag::feature":
    body_analysis_evidence: not_detected
    end_tag: endfeature
    intermediates:
      - else
