crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_helpers.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::absolute_value":
    kind: filter
    has_doc: false
  "filter::as_sorted":
    kind: filter
    has_doc: false
  "filter::as_tag_alias":
    kind: filter
    has_doc: false
  "filter::basename":
    kind: filter
    has_doc: false
  "filter::date":
    kind: filter
    has_doc: false
  "filter::duration":
    kind: filter
    has_doc: false
  "filter::get_item":
    kind: filter
    has_doc: false
  "filter::is_url":
    kind: filter
    has_doc: false
  "filter::multiply":
    kind: filter
    has_doc: false
  "filter::sanitize_periods":
    kind: filter
    has_doc: false
  "filter::small_count":
    kind: filter
    has_doc: false
  "filter::soft_break":
    kind: filter
    has_doc: false
  "filter::split":
    kind: filter
    has_doc: false
  "filter::timesince":
    kind: filter
    has_doc: false
  "filter::titleize":
    kind: filter
    has_doc: false
  "filter::to_json":
    kind: filter
    has_doc: false
  "filter::urlquote":
    kind: filter
    has_doc: false
  "tag::absolute_uri":
    kind: tag
    has_doc: false
  "tag::get_sentry_version":
    kind: tag
    has_doc: false
  "tag::loading_message":
    kind: tag
    has_doc: false
  "tag::org_url":
    kind: tag
    has_doc: false
  "tag::percent":
    kind: tag
    has_doc: false
  "tag::querystring":
    kind: tag
    has_doc: false
  "tag::random_int":
    kind: tag
    has_doc: false
  "tag::security_contact":
    kind: tag
    has_doc: false
  "tag::serialize":
    kind: tag
    has_doc: false
  "tag::system_origin":
    kind: tag
    has_doc: false
symbols_are_unobserved: true
tag_rules:
  "src.sentry.templatetags.sentry_helpers::tag::get_sentry_version":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::loading_message":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::org_url":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: organization
            requirement: required
            kind: Variable
          - name: path
            requirement: required
            kind: Variable
          - name: query
            requirement: optional
            kind: Variable
          - name: fragment
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::percent":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: value
            requirement: required
            kind: Variable
          - name: total
            requirement: required
            kind: Variable
          - name: format
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::querystring":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: kwargs
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::random_int":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: a
            requirement: required
            kind: Variable
          - name: b
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::security_contact":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::serialize":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: value
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "src.sentry.templatetags.sentry_helpers::tag::system_origin":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities:
  "src.sentry.templatetags.sentry_helpers::filter::absolute_value": no_argument
  "src.sentry.templatetags.sentry_helpers::filter::as_sorted": no_argument
  "src.sentry.templatetags.sentry_helpers::filter::as_tag_alias": no_argument
  "src.sentry.templatetags.sentry_helpers::filter::basename": no_argument
  "src.sentry.templatetags.sentry_helpers::filter::date": optional_argument
  "src.sentry.templatetags.sentry_helpers::filter::duration": no_argument
  "src.sentry.templatetags.sentry_helpers::filter::get_item": required_argument
  "src.sentry.templatetags.sentry_helpers::filter::is_url": no_argument
  "src.sentry.templatetags.sentry_helpers::filter::multiply": required_argument
  "src.sentry.templatetags.sentry_helpers::filter::small_count": optional_argument
  "src.sentry.templatetags.sentry_helpers::filter::soft_break": required_argument
  "src.sentry.templatetags.sentry_helpers::filter::split": optional_argument
  "src.sentry.templatetags.sentry_helpers::filter::timesince": optional_argument
  "src.sentry.templatetags.sentry_helpers::filter::titleize": no_argument
  "src.sentry.templatetags.sentry_helpers::filter::to_json": optional_argument
  "src.sentry.templatetags.sentry_helpers::filter::urlquote": optional_argument
block_specs: {}
