crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_platforms.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::letter_platform_svg":
    kind: tag
    has_doc: false
  "tag::platform_avatar":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "sentry.templatetags.sentry_platforms::tag::letter_platform_svg":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: display_name
            requirement: required
            kind: Variable
          - name: identifier
            requirement: required
            kind: Variable
          - name: size
            requirement: optional
            kind: Variable
          - name: rounded
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "sentry.templatetags.sentry_platforms::tag::platform_avatar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: display_name
            requirement: required
            kind: Variable
          - name: size
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
