crates/djls-project/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_react.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::get_react_config":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "sentry.templatetags.sentry_react::tag::get_react_config":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
